app-2tier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-webserver
spec:
  replicas: 8
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - name: apache
          image: httpd
          ports:
            - containerPort: 80
