appservice-2tier.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
spec:
  clusterIP: None
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: apache
