cpxapache-2tier.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: apache-cpx
spec:
  replicas: 1
  template:
    metadata:
      name: apache-cpx
      labels:
        app: apache-cpx
        app1: exporter
      annotations:
        NETSCALER_AS_APP: "True"
    spec:
      serviceAccountName: cpx
      containers:
        - name: apache-cpx
          image: "quay.io/citrix/citrix-k8s-cpx-ingress:13.0-36.28"
          securityContext:
             privileged: true
          imagePullPolicy: Always
        # Add cic as a sidecar
        - name: cic
          image: "quay.io/citrix/citrix-k8s-ingress-controller:1.1.3"
          args:
            - --ingress-classes
              cpx
          imagePullPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: lb-service-cpx
  labels:
    app: lb-service-cpx
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    name: http
    targetPort: 80
  selector:
    app: apache-cpx
