exporter-vpx-ingress.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exporter-vpx-ingress
  labels:
    app: exporter-vpx-ingress
spec:
  containers:
    - name: exporter
      image: "quay.io/citrix/citrix-adc-metrics-exporter:1.4.1"
      imagePullPolicy: Always
      args:
        - "--target-nsip=<IP_of_VPX>"
        - "--port=8888"
      volumeMounts:
      - name: nslogin
        mountPath: "/mnt/nslogin"
        readOnly: true
      securityContext:
        readOnlyRootFilesystem: true
  volumes:
  - name: nslogin
    secret:
      secretName: nslogin
---
apiVersion: v1
kind: Service
metadata:
  name: exporter-vpx-ingress
  labels:
    app: exporter-vpx-ingress
    service-type: citrix-adc-monitor
spec:
  type: NodePort
  ports:
    - name: exporter-port
      port: 8888
      targetPort: 8888
  selector:
    app: exporter-vpx-ingress
