appingress-2tier.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apache-ingress
  annotations:
   #ingress.citrix.com/insecure-service-type: "tcp"
   #ingress.citrix.com/insecure-port: "80"
   kubernetes.io/ingress.class: "cpx"
spec:
  rules:
  - host: 2tier.com
    http:
      paths:
      - path:
        backend:
          serviceName: httpd-service
          servicePort: 80
